[gd_scene load_steps=2 format=2]

[ext_resource path="res://exercise1/Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button1" type="Button" parent="."]
margin_left = 33.0
margin_top = 22.0
margin_right = 234.0
margin_bottom = 112.0
rect_scale = Vector2( 1.01365, 1 )
text = "button 1"

[node name="Button2" type="Button" parent="."]
margin_left = 797.0
margin_top = 16.0
margin_right = 1002.0
margin_bottom = 113.0
text = "button 2"

[node name="Button3" type="Button" parent="."]
margin_left = 42.0
margin_top = 484.0
margin_right = 241.0
margin_bottom = 573.0
text = "button 3"

[node name="Button4" type="Button" parent="."]
margin_left = 792.0
margin_top = 477.0
margin_right = 996.0
margin_bottom = 579.0
text = "button 4"

[node name="Label" type="Label" parent="."]
margin_left = 478.0
margin_top = 284.0
margin_right = 583.0
margin_bottom = 319.0
text = "center"

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
